# spdk

./: .gitattributes  .gitignore  .gitmodules  Makefile  configure
app/: Makefile
dpdkbuild/: Makefile
include/spdk/: assert.h  nvme_spec.h
include/spdk_internal/: mock.h
isalbuild/: Makefile  meson.build
lib/env_dpdk/: env.mk  memory.c  pci.c
lib/event/: reactor.c
lib/util/: math.c
mk/: spdk.app.mk  spdk.app_cxx.mk  spdk.app_vars.mk  spdk.common.mk  spdk.mock.unittest.mk  spdk.unittest.mk
module/sock/posix/: posix.c
scripts/: common.sh  detect_cc.sh
test/common/: autotest_common.sh
test/unit/lib/blob/: Makefile
test/unit/lib/nvme/: Makefile
test/unit/lib/util/string.c/: string_ut.c
